--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 .card {
   position: relative;
   width: 220px;
-  height: 320px;
+  height: 360px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +30,7 @@
   font-weight: 700;
   font-size: 20px;
   letter-spacing: 1.2px;
-  color: white;
+  color: rgb(255, 162, 0);
 }
 
 .weather {
@@ -42,7 +42,7 @@
 
 .temp {
   font-size: 30px;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .minmaxContainer {
