--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 .card {
   position: relative;
-  width: 220px;
+  width: 170px;
   height: 320px;
   display: flex;
   flex-direction: column;
@@ -80,4 +80,12 @@
   font-size: 20px;
   font-weight: 500;
   color: rgb(255, 255, 255);
+}
+
+#cardContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
 }
