--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 * {
   margin-bottom: 10px;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  align-items: center;
+  /* align-content: center; */
+}
